--- a/css/main.css
+++ b/css/main.css
@@ -187,15 +187,22 @@ ul {
 }
 
 .relative {
-    /* add relative properties here */
+    position: relative;
+    top: 40px;
+    left: 20px;
 }
 
 .relative-2 {
     /* add relative-2 properties here */
+    position: relative;
 }
 
 .absolute {
     /* add absolute properties here */
+    /* top and right positions are based on the body element  */
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .absolute-2 {
@@ -203,6 +210,9 @@ ul {
     height: 75px;
     border: 2px solid #a89070;
     /* add absolute-2 properties here */
+    position: absolute;
+    right: 0px;
+    bottom: -10px;
 }
 
 .absolute-2 .box-paragraph {
@@ -213,6 +223,9 @@ ul {
 
 .fixed {
     /* add fixed properties here */
+    position: fixed;
+    top: 50%;
+    right: 0;
 }
 
 
